--- a/Arvato Project Workbook.ipynb
+++ b/Arvato Project Workbook.ipynb
@@ -674,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 104,
    "metadata": {
     "scrolled": false
    },
@@ -743,7 +743,7 @@
        "EXTSEL992           57.0       73.40"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1618,9 +1618,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 112,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['affinity indicating in what way the person is traditional minded',\n",
+       "       nan, nan, nan, nan, nan, nan, nan], dtype=object)"
+      ]
+     },
+     "execution_count": 112,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# To print the information for the values in this sub-topic's\n",
     "\n",
@@ -1630,8 +1642,8 @@
     "#more_info[258:264:5] # D19_BUCH_RZ\n",
     "#more_info[632:640] # D19_VOLLSORTIMENT_RZ\n",
     "#more_info[662:686] # Financial fields\n",
-    "#more_info[2155:2170] # SEMIO_PFLICHT\n",
-    "#more_info[2187:2195] # SEMIO_TRADV"
+    "#more_info[2155:2170]['Unnamed: 2'].values# SEMIO_PFLICHT\n",
+    "more_info[2187:2195]['Unnamed: 2'].values # SEMIO_TRADV"
    ]
   },
   {
@@ -2313,7 +2325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -2343,7 +2355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2356,7 +2368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 73,
    "metadata": {
     "scrolled": true
    },
@@ -2374,7 +2386,7 @@
        "49"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2394,7 +2406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2404,7 +2416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -2423,7 +2435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2444,7 +2456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2458,7 +2470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -2475,7 +2487,7 @@
        "                          validation_fraction=0.1, verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2486,14 +2498,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Auc Score: 0.6915374947633012\n"
+      "Auc Score: 0.7862874661994896\n"
      ]
     }
    ],
@@ -2518,7 +2530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2527,7 +2539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -2536,7 +2548,7 @@
        "(42833, 366)"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2547,7 +2559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -2566,7 +2578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2575,7 +2587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -2607,27 +2619,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>1754</td>\n",
-       "      <td>0.018965</td>\n",
+       "      <td>0.037830</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1770</td>\n",
-       "      <td>0.030364</td>\n",
+       "      <td>0.033590</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>1465</td>\n",
-       "      <td>0.006349</td>\n",
+       "      <td>0.004859</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>1470</td>\n",
-       "      <td>0.005670</td>\n",
+       "      <td>0.007328</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>1478</td>\n",
-       "      <td>0.013550</td>\n",
+       "      <td>0.008121</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -2635,14 +2647,14 @@
       ],
       "text/plain": [
        "    LNR  RESPONSE\n",
-       "0  1754  0.018965\n",
-       "1  1770  0.030364\n",
-       "2  1465  0.006349\n",
-       "3  1470  0.005670\n",
-       "4  1478  0.013550"
+       "0  1754  0.037830\n",
+       "1  1770  0.033590\n",
+       "2  1465  0.004859\n",
+       "3  1470  0.007328\n",
+       "4  1478  0.008121"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2654,7 +2666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
